--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ function go(){
     <a href="#" class="close">&times;</a>
   </div>
 
-<div style="padding:25px;">
-<p><strong>检测到您未开启JavaScript，请您点击下面按钮手动跳转</strong></p>
+<div style="padding:20px;">
+<h3><strong>检测到您未开启JavaScript，请您点击下面按钮手动跳转</strong></h3>
 </div>
 </noscript>
 
