--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="http://cdn.static.runoob.com/libs/foundation/5.5.3/js/foundation.min.js"></script>
 <script src="http://cdn.static.runoob.com/libs/foundation/5.5.3/js/vendor/modernizr.js"></script>
-<meta http-equiv="Refresh" content="2;url=https://bugcoder.gq"/>
+<meta http-equiv="Refresh" content="2;url=https://bugcoder.asia"/>
 </head>
 <body>
 
 <div style="padding:20px;">
 <h1><strong>正在跳转…</strong></h1>
-      <h3>本站搬家了，2s后将自动跳转至bugcoder.gq，若未自动跳转请点击下方按钮手动跳转</h3>
-      <a href="https://bugcoder.gq/"><button type="button" class="button small"><strong>立即跳转</strong></button></a>
+      <h3>本站搬家了，2s后将自动跳转至bugcoder.asia，若未自动跳转请点击下方按钮手动跳转</h3>
+      <a href="https://bugcoder.asia/"><button type="button" class="button small"><strong>立即跳转</strong></button></a>
 </div>
 </body>
 </html>
