--- a/404.html
+++ b/404.html
@@ -1,21 +1,55 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="zh-cn">
-<head>
-  <title>跳转中… - 写bug的代码人</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="http://cdn.static.runoob.com/libs/foundation/5.5.3/css/foundation.min.css">
-<script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="http://cdn.static.runoob.com/libs/foundation/5.5.3/js/foundation.min.js"></script>
-<script src="http://cdn.static.runoob.com/libs/foundation/5.5.3/js/vendor/modernizr.js"></script>
-<meta http-equiv="Refresh" content="2;url=https://bugcoder.asia"/>
-</head>
-<body>
+    <head>
+        <title>Not Found 404-写bug的代码人</title>
+        <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Not Found 404-写bug的代码人">
+        <meta http-equiv="Refresh" content="15;url=https://bugcoder.asia">
+        <style>
+body {
+    font: 100% Lucida Sans, Verdana;
+    margin: 20px;
+    line-height: 45px;
+    text-align: center;
+}
 
-<div style="padding:20px;">
-<h1><strong>正在跳转…</strong></h1>
-      <h3>本站搬家了，2s后将自动跳转至bugcoder.asia，若未自动跳转请点击下方按钮手动跳转</h3>
-      <a href="https://bugcoder.asia/"><button type="button" class="button small"><strong>立即跳转</strong></button></a>
-</div>
-</body>
+.button {
+  display: inline-block;
+  padding: 15px 25px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+.button:active {
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+a {
+    color: #000000;
+    text-decoration: underline;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+p{
+    font: 100%;
+}
+</style>
+    </head>
+    <body>
+        <h1>NOT FOUND 404</h1>
+        <h1>未找到页面</h1>
+        <p>这可能是由于您输入的网址有误或您所点击的链接指向有误。无论如何，请您及时联系站长（邮箱：<a href="mailto:bugcoderx@qq.com">bugcoderx@qq.com</a>）或前往<a href="http://bugcoder.asia/talk.html">留言板</a>反馈</p>
+        <p>您将会在15秒后被重定向至主页，若没有自动跳转，请点击下方按钮</p> <button class="button"><a href="http://bugcoder.asia/">返回主页</a></button>
+    </body>
 </html>
